2004-03-15  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c, src/pdsh/mod.h, src/pdsh/opt.c : Misc. doc and 
	other cosmetic changes suggested by Py Watson <py@llnl.gov>.

	* src/pdsh/mod_rcmd.c : Move "mrsh" module to top position in
	rcmd_rank[], making it the default whenever installed.
	
	* src/pdsh/dsh.c (_wdog) : Terminate watchdog if thread info
	has been freed.

2004-03-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sdr.c : Rewrite module so that -a, -i, and -v can be
	used independently of eachother and along with other node selection
	options.

	* src/modules/genders.c : Modified behavior of -a such that all 
	nodes are targeted =except= those with "pdsh_all_skip" attribute.
	New "-A" option provides old -a behavior. Added -F option to point
	pdsh to a non-default genders file.

	* src/modules/nodeattr.c : Added -A option and changed semantics
	of -a to match genders module.

2004-03-03  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (qsw_spawn_neterr_thr) : Dlopen libelan3.so 
	when needed on Elan3 systems for running the network error thread. 
	Allows single qshd/mqshd binary to run on Elan3 or Elan4.

	* doc/pdsh.1.in, doc/pdcp.1.in : Rewrite of pdsh/pdcp documentation.

2004-02-25  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/Makefile.am, src/qsnet/Makefile.am : Build convenience
	libs (libqsnet, libmods) only when needed. 

	* configure.ac, src/pdsh/Makefile.am : Add -Wl,-bgcbypass=1000 when 
	building pdsh with dynamic modules on AIX. This is hack to ensure to
	that symbols in libcommon not used by pdsh but possibly needed by
	dlopen'd modules are not garbage-collected by the AIX linker.

2004-02-24  Mark Grondona <mgrondona@llnl.gov>
	
	* configure.ac : Export WITH_GNU_LD Automake conditional.

	* src/modules/Makefile.am : Build version script for all pdsh modules
	if using GNU linker.

2004-02-17  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c : Allow multiple genders attributes to be